edition = "2023";  // successor to proto2 and proto3

package v1;
import "google/protobuf/go_features.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";
option features.(pb.go).api_level = API_OPAQUE;

message AggregateBy {
  Aggregation aggrFunc = 1;
  bool distinct = 2;
}

enum Aggregation {
  UNSET = 0;
  COUNT = 1;
  MIN = 2;
  MAX = 3;
}

message SortOption {
  string field = 1;
  bool reversed = 2;
  // This field is under development. It is not supported on any REST APIs.
  AggregateBy aggregate_by = 3;
}

message Pagination {
  int32 limit = 1;
  int32 offset = 2;
  SortOption sort_option = 3;
  // This field is under development. It is not supported on any REST APIs.
  repeated SortOption sort_options = 4;
}
